Bug 707185 - Programmatic control for eventtracer. r=ted.mielczarek